# OOP

Exercises/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.c  22.cpp  23.cpp  24.cpp  25.cpp  26.c  27.cpp  28.c  29.cpp  3.cpp  30.cpp  31.cpp  32.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.c  9.c  CMakeLists.txt
Labs/: CMakeLists.txt
Labs/Lab_1/: task_1.c  task_2.c  task_3.c
Labs/Lab_10/: case 1  case 2  task_1.cpp  task_2.cpp
Labs/Lab_2/: task_1.cpp  task_2.cpp  task_3.cpp
Labs/Lab_3/: task_1.cpp  task_2.cpp  task_3.cpp
Labs/Lab_4/: Case 2  task_1.cpp  task_2.cpp
Labs/Lab_5/: task_1.cpp  task_2.cpp
Labs/Lab_6/: task_1.cpp  task_2.cpp
Labs/Lab_7/: task_1.cpp  task_2.cpp
Labs/Lab_8/: task_1.cpp  task_2.cpp
Labs/Lab_9/: case 1  case 2  task_1.cpp  task_2.cpp
