cmake_minimum_required(VERSION 3.23)
project(First_Midterm_Exercises)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)

add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(7 7.cpp)
add_executable(8 8.c)
add_executable(9 9.c)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)
add_executable(13 13.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(16 16.cpp)
add_executable(17 17.cpp)
add_executable(18 18.cpp)
add_executable(19 19.cpp)
add_executable(20 20.cpp)
add_executable(21 21.c)
add_executable(22 22.cpp)
add_executable(23 23.cpp)
add_executable(24 24.cpp)
add_executable(25 25.cpp)
add_executable(26 26.c)
add_executable(27 27.cpp)
add_executable(28 28.c)
add_executable(29 29.cpp)
add_executable(30 30.cpp)
add_executable(31 31.cpp)
add_executable(32 32.cpp)