cmake_minimum_required(VERSION 3.23)
project(OOP_LABS)

set(CMAKE_CXX_STANDARD 11)

# FIRST MIDTERM

# Lab 1
add_executable(Lab_1_task_1 Lab_1/task_1.c)
add_executable(Lab_1_task_2 Lab_1/task_2.c)
add_executable(Lab_1_task_3 Lab_1/task_3.c)

# Lab 2
add_executable(Lab_2_task_1 Lab_2/task_1.cpp)
add_executable(Lab_2_task_2 Lab_2/task_2.cpp)
add_executable(Lab_2_task_3 Lab_2/task_3.cpp)

# Lab 3
add_executable(Lab_3_task_1 Lab_3/task_1.cpp)
add_executable(Lab_3_task_2 Lab_3/task_2.cpp)
add_executable(Lab_3_task_3 Lab_3/task_3.cpp)

# Lab 4
add_executable(Lab_4_task_1 Lab_4/task_1.cpp)
add_executable(Lab_4_task_2 Lab_4/task_2.cpp)

#SECOND MIDTERM

# Lab 5
add_executable(Lab_5_task_1 Lab_5/task_1.cpp)
add_executable(Lab_5_task_2 Lab_5/task_2.cpp)

# Lab 6
add_executable(Lab_6_task_1 Lab_6/task_1.cpp)
add_executable(Lab_6_task_2 Lab_6/task_2.cpp)

# Lab 7
add_executable(Lab_7_task_1 Lab_7/task_1.cpp)
add_executable(Lab_7_task_2 Lab_7/task_2.cpp)

# Lab 8
add_executable(Lab_8_task_1 Lab_8/task_1.cpp)
add_executable(Lab_8_task_2 Lab_8/task_2.cpp)

# Lab 9
add_executable(Lab_9_task_1 Lab_9/task_1.cpp)
add_executable(Lab_9_task_2 Lab_9/task_2.cpp)

# Lab 10
add_executable(Lab_10_task_1 Lab_10/task_1.cpp)
add_executable(Lab_10_task_2 Lab_10/task_2.cpp)

